#301 closed bug (fixed)
BScrollBar::SetRange crash
Reported by: | marcusoverhagen | Owned by: | |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
BScrollBar::SetRange crashes, happened when trying to display connection information in Cortex (right click one of the wires and select from menu)
Attachments (1)
Change History (4)
by , 19 years ago
Attachment: | screen8.png added |
---|
comment:1 by , 19 years ago
Fixed in hrev17009. Our BView resized/moved hooks weren't called asynchronously, and Cortex used a view in such a hook that were created later in AttachedToWindow() - bad style, I'd say :-)
comment:2 by , 19 years ago
Status: | new → closed |
---|
comment:3 by , 19 years ago
Resolution: | → fixed |
---|
Note:
See TracTickets
for help on using tickets.
Stack Crawl