* The BView::FrameResized()/FrameMoved() hooks are now called asynchronously   as in R5, and no longer directly. This fixes bug #301. * As a side effect, the hooks are now only called when the view is attached   to a window, as on R5. * Removed dead B_VIEW_RESIZED/MOVED code from BWindow.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17009 a95241bf-73f2-0310-859d-f6bbb57e9c96