src/kits/interface/Window.cpp
@@ -750,17 +750,8 @@ BWindow::DispatchMessage(BMessage *msg, BHandler *target)
 		case B_WINDOW_RESIZED:
 		{
 			int32 width, height;
-//			if (msg->FindInt32("width", &width) == B_OK
-//				&& msg->FindInt32("height", &height) == B_OK) {
-//				fFrame.right = fFrame.left + width;
-//				fFrame.bottom = fFrame.top + height;
-//
-//				_AdoptResize();
-//				FrameResized(width, height);
-//			}
 			if (msg->FindInt32("width", &width) == B_OK
 				&& msg->FindInt32("height", &height) == B_OK) {
-
 				// combine with pending resize notifications
 				BMessage* pendingMessage;
 				while ((pendingMessage = MessageQueue()->FindMessage(B_WINDOW_RESIZED, 0))) {
@@ -768,11 +759,11 @@ BWindow::DispatchMessage(BMessage *msg, BHandler *target)
 						int32 nextWidth;
 						if (pendingMessage->FindInt32("width", &nextWidth) == B_OK)
 							width = nextWidth;
-	
+
 						int32 nextHeight;
 						if (pendingMessage->FindInt32("height", &nextHeight) == B_OK) 
 							height = nextHeight;
-	
+
 						MessageQueue()->RemoveMessage(pendingMessage);
 						// TODO: the BeBook says that MessageQueue::RemoveMessage() deletes the message!
 						delete pendingMessage;
@@ -787,7 +778,7 @@ BWindow::DispatchMessage(BMessage *msg, BHandler *target)
 					// in an _UPDATE_ message
 					fFrame.right = fFrame.left + width;
 					fFrame.bottom = fFrame.top + height;
-	
+
 					_AdoptResize();
 //					FrameResized(width, height);
 				}
@@ -1037,56 +1028,6 @@ FrameMoved(origin);
 			fLink->Flush();
 			fInTransaction = false;
 
-			break;
-		}
-
-		case B_VIEW_RESIZED:
-		case B_VIEW_MOVED:
-		{
-			// NOTE: The problem with this implementation is that BView::Window()->CurrentMessage()
-			// will show this message, and not what it used to be on R5. This might break apps and
-			// we need to fix this here or change the way this feature is implemented. However, this
-			// implementation shows what has to be done when Layers are moved or resized inside the
-			// app_server. This message is generated from Layer::MoveByHook() and ResizeByHook() in
-			// Layer::_AddToViewsWithInvalidCoords().
-			int32 token;
-			BPoint frameLeftTop;
-			float width;
-			float height;
-			BView *view;
-			for (int32 i = 0; CurrentMessage() && msg->FindInt32("_token", i, &token) >= B_OK; i++) {
-				if (token >= 0) {
-					msg->FindPoint("where", i, &frameLeftTop);
-					msg->FindFloat("width", i, &width);
-					msg->FindFloat("height", i, &height);
-					if ((view = _FindView(token)) != NULL) {
-						// update the views offset in parent
-						if (view->LeftTop() != frameLeftTop) {
-							view->fParentOffset = frameLeftTop;
-
-							// optionally call FrameMoved
-							if (view->fFlags & B_FRAME_EVENTS) {
-								STRACE(("Calling BView(%s)::FrameMoved( %.1f, %.1f )\n", view->Name(),
-										frameLeftTop.x, frameLeftTop.y));
-								view->FrameMoved(frameLeftTop);
-							}
-						}
-						// update the views width and height
-						if (view->fBounds.Width() != width || view->fBounds.Height() != height) {
-							// TODO: does this work when a views left/top side is resized?
-							view->fBounds.right = view->fBounds.left + width;
-							view->fBounds.bottom = view->fBounds.top + height;
-							// optionally call FrameResized
-							if (view->fFlags & B_FRAME_EVENTS) {
-								STRACE(("Calling BView(%s)::FrameResized( %f, %f )\n", view->Name(), width, height));
-								view->FrameResized(width, height);
-							}
-						}
-					} else {
-						fprintf(stderr, "B_VIEW_RESIZED ***PANIC: BW: Can't find view with ID: %ld !***\n", token);
-					}
-				}
-			}
 			break;
 		}
 
